# sy-tock-logistics-workflow

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
.github/workflows/: test.yml
picking_carrier_tracking_ref_search/: README.rst  __manifest__.py
picking_carrier_tracking_ref_search/models/: stock_picking.py
picking_carrier_tracking_ref_search/readme/: DESCRIPTION.md  USAGE.md
picking_carrier_tracking_ref_search/views/: stock_picking_views.xml
picking_edit_printed_status/: README.rst  __manifest__.py
picking_edit_printed_status/readme/: DESCRIPTION.md  USAGE.md
picking_edit_printed_status/views/: stock_picking_views.xml
picking_product_warn_message/: README.rst  __manifest__.py
picking_product_warn_message/i18n/: es.po
picking_product_warn_message/models/: __init__.py  product.py  stock_picking.py
picking_product_warn_message/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
picking_product_warn_message/views/: product_views.xml  stock_picking_views.xml
picking_shipped_by/: README.rst  __init__.py  __manifest__.py
picking_shipped_by/i18n/: ca_ES.po  es.po
picking_shipped_by/models/: __init__.py  res_partner.py  stock_picking.py
picking_very_high_priority/: README.rst
product_search_category_attribute_stock/: README.rst
queued_purchase_picking_notify/: README.rst
queued_sale_picking_notify/: README.rst
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
stock_move_responsible/: README.rst
stock_picking_force_availability/: README.rst
stock_picking_show_move_lots/: README.rst
(+29 files in other folders)
