[project]
name = "odoo-addons-sygel-technology-sy-stock-logistics-workflow"
version = "17.0.20241105.0"
dependencies = [
    "odoo-addon-queued_purchase_picking_notify>=17.0dev,<17.1dev",
    "odoo-addon-queued_sale_picking_notify>=17.0dev,<17.1dev",
    "odoo-addon-stock_move_responsible>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
